extend roles path

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -6,7 +6,7 @@ forks = 10
 timeout = 30
 pipelining = true
 collections_paths = ./collections
-roles_path = ./roles
+roles_path = ./roles:~/.ansible/roles
 
 [privilege_escalation]
 become = true
